--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.161.0",
+        "changelog": "Fixed toggle position: now truly LEFT of search (right:755px). Tooltip now uses fixed positioning to avoid clipping.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.161.0/jellyfin-plugin-ratings_1.0.161.0.zip",
+        "checksum": "7a09459912e66e4ffe44bf54e2b25c25",
+        "timestamp": "2025-12-27T02:30:00Z"
+      },
+      {
         "version": "1.0.160.0",
         "changelog": "Notification toggle moved to LEFT of search field. Added hover tooltip explaining the toggle function.",
         "targetAbi": "10.11.0.0",
