--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.162.0",
+        "changelog": "Mobile: toggle now sticks to LEFT of Request button (right:170px). Desktop: toggle left of search field.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.162.0/jellyfin-plugin-ratings_1.0.162.0.zip",
+        "checksum": "5ca37c5289c4c0db57f3a3457fc3481c",
+        "timestamp": "2025-12-27T03:00:00Z"
+      },
+      {
         "version": "1.0.161.0",
         "changelog": "Fixed toggle position: now truly LEFT of search (right:755px). Tooltip now uses fixed positioning to avoid clipping.",
         "targetAbi": "10.11.0.0",
