--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.163.0",
+        "changelog": "Mobile: toggle at top:55px, right:150px - second row left of Request button.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.163.0/jellyfin-plugin-ratings_1.0.163.0.zip",
+        "checksum": "5734a6f7a8c8c2df55b6b84481983385",
+        "timestamp": "2025-12-27T03:30:00Z"
+      },
+      {
         "version": "1.0.162.0",
         "changelog": "Mobile: toggle now sticks to LEFT of Request button (right:170px). Desktop: toggle left of search field.",
         "targetAbi": "10.11.0.0",
