--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.164.0",
+        "changelog": "Added 590px breakpoint: top:58px, right:130px for smaller screens.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.164.0/jellyfin-plugin-ratings_1.0.164.0.zip",
+        "checksum": "34ccf9510ccc6f74df561a7750891827",
+        "timestamp": "2025-12-27T03:45:00Z"
+      },
+      {
         "version": "1.0.163.0",
         "changelog": "Mobile: toggle at top:55px, right:150px - second row left of Request button.",
         "targetAbi": "10.11.0.0",
