--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.165.0",
+        "changelog": "Added 470px breakpoint: top:10px, right:180px for very small screens.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.165.0/jellyfin-plugin-ratings_1.0.165.0.zip",
+        "checksum": "dfcc3e820db6b86e52cd38d0e12aeca4",
+        "timestamp": "2025-12-27T04:00:00Z"
+      },
+      {
         "version": "1.0.164.0",
         "changelog": "Added 590px breakpoint: top:58px, right:130px for smaller screens.",
         "targetAbi": "10.11.0.0",
