--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.167.0",
+        "changelog": "Improved notification queue: 2-10 min random delay between notifications, 24h duplicate prevention, better error handling. All queued media will be shown.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.167.0/jellyfin-plugin-ratings_1.0.167.0.zip",
+        "checksum": "970a83108e9a73b8468e419702387985",
+        "timestamp": "2025-12-27T06:00:00Z"
+      },
+      {
         "version": "1.0.165.0",
         "changelog": "Added 470px breakpoint: top:10px, right:180px for very small screens.",
         "targetAbi": "10.11.0.0",
