--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.180.0",
+        "changelog": "Download Manager: fixed download trigger using iframe method.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.180.0/jellyfin-plugin-ratings_1.0.180.0.zip",
+        "checksum": "ce299591a92d289439ae2e09ed33fbe4",
+        "timestamp": "2026-01-01T17:00:00Z"
+      },
+      {
         "version": "1.0.179.0",
         "changelog": "Download Manager: native browser downloads - now works with large files (GB+). Simplified UI.",
         "targetAbi": "10.11.0.0",
