--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.181.0",
+        "changelog": "Download Manager: clearer status - shows 'Sent to browser' instead of wrong file size.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.181.0/jellyfin-plugin-ratings_1.0.181.0.zip",
+        "checksum": "cdb56149d423a33e6484b876438ce52d",
+        "timestamp": "2026-01-01T18:00:00Z"
+      },
+      {
         "version": "1.0.180.0",
         "changelog": "Download Manager: fixed download trigger using iframe method.",
         "targetAbi": "10.11.0.0",
