--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.180.0",
+        "changelog": "Major request system update: Admin requests option, request limits per month, auto-delete rejected requests, snooze requests, fully customizable form fields (enable/disable/required), click same star to remove rating, API for user request editing.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.180.0/jellyfin-plugin-ratings_1.0.180.0.zip",
+        "checksum": "d1d2678d0a02447caf4ad1f720ce4544",
+        "timestamp": "2026-01-16T18:00:00Z"
+      },
+      {
         "version": "1.0.179.0",
         "changelog": "New API endpoint: GET /Ratings/Users/{userId}/Ratings returns all items rated by a specific user. Also added GET /Ratings/MyRatings for current user's ratings.",
         "targetAbi": "10.11.0.0",
