--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.181.0",
+        "changelog": "Users can now edit and delete their own pending requests. Edit/Delete buttons appear only on pending requests.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.181.0/jellyfin-plugin-ratings_1.0.181.0.zip",
+        "checksum": "a9d30f54ef57fb40f032fb977e5a4e41",
+        "timestamp": "2026-01-16T18:30:00Z"
+      },
+      {
         "version": "1.0.180.0",
         "changelog": "Major request system update: Admin requests option, request limits per month, auto-delete rejected requests, snooze requests, fully customizable form fields (enable/disable/required), click same star to remove rating, API for user request editing.",
         "targetAbi": "10.11.0.0",
