--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.184.0",
+        "changelog": "Dropdown search: Search now shows results in a dropdown below the search field without changing the main page. Searches entire media library. Fixed admin tab text grammar.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.184.0/jellyfin-plugin-ratings_1.0.184.0.zip",
+        "checksum": "4c2850e4a47cc49bff41ec9fc2bacdaf",
+        "timestamp": "2026-01-16T19:20:00Z"
+      },
+      {
         "version": "1.0.183.0",
         "changelog": "Snooze UI: Date picker and snooze/unsnooze buttons in admin view. Requests now grouped by status categories (Processing > Pending > Snoozed > Done > Rejected).",
         "targetAbi": "10.11.0.0",
