--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.189.0",
+        "changelog": "New Latest Media button replaces Sync Play - shows dropdown with 50 most recently added movies/series with type badges.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.189.0/jellyfin-plugin-ratings_1.0.189.0.zip",
+        "checksum": "13254243d4a263517c6aa09a7de1e016",
+        "timestamp": "2026-01-19T12:20:00Z"
+      },
+      {
         "version": "1.0.188.0",
         "changelog": "Fixed rating removal by clicking same star - added session token auth fallback to DELETE endpoint.",
         "targetAbi": "10.11.0.0",
