--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.194.0",
+        "changelog": "Media button now in header - replaces original search button (admin only). Responsive design matches other header buttons.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.194.0/jellyfin-plugin-ratings_1.0.194.0.zip",
+        "checksum": "3afe16698b6742bf6d5d1929b7b28372",
+        "timestamp": "2026-01-19T17:00:00Z"
+      },
+      {
         "version": "1.0.193.0",
         "changelog": "Fixed Media button injection - now properly finds and injects into Jellyfin's mainDrawer sidebar after Dashboard link.",
         "targetAbi": "10.11.0.0",
