--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.196.0",
+        "changelog": "DEBUG: Added console logging to diagnose Media button issue.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.196.0/jellyfin-plugin-ratings_1.0.196.0.zip",
+        "checksum": "d74b4e0c599e98d2056b9eeb279810cd",
+        "timestamp": "2026-01-19T18:00:00Z"
+      },
+      {
         "version": "1.0.195.0",
         "changelog": "Fixed Media button - now follows exact same pattern as Latest Media button for reliable injection.",
         "targetAbi": "10.11.0.0",
