--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.197.0",
+        "changelog": "Fixed Media button - was calling wrong function (isAdmin instead of checkIfAdmin).",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.197.0/jellyfin-plugin-ratings_1.0.197.0.zip",
+        "checksum": "0c9d873c1f82b4eb88b866159908bb68",
+        "timestamp": "2026-01-19T18:15:00Z"
+      },
+      {
         "version": "1.0.196.0",
         "changelog": "DEBUG: Added console logging to diagnose Media button issue.",
         "targetAbi": "10.11.0.0",
