--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.198.0",
+        "changelog": "Fixed double 'Leaving in X days' badge on detail page - now shows only once near play button.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.198.0/jellyfin-plugin-ratings_1.0.198.0.zip",
+        "checksum": "e94be48f75df3de2f76472897d8b24b4",
+        "timestamp": "2026-01-19T18:30:00Z"
+      },
+      {
         "version": "1.0.197.0",
         "changelog": "Fixed Media button - was calling wrong function (isAdmin instead of checkIfAdmin).",
         "targetAbi": "10.11.0.0",
