--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.199.0",
+        "changelog": "Fixed: Only ONE leaving badge on detail page, card badges now use CSS like rating badges.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.199.0/jellyfin-plugin-ratings_1.0.199.0.zip",
+        "checksum": "29db1718aeb0b8354685691a1136390f",
+        "timestamp": "2026-01-19T19:00:00Z"
+      },
+      {
         "version": "1.0.198.0",
         "changelog": "Fixed double 'Leaving in X days' badge on detail page - now shows only once near play button.",
         "targetAbi": "10.11.0.0",
