--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.201.0",
+        "changelog": "DEBUG: Added logging to diagnose leaving badge issues on cards.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.201.0/jellyfin-plugin-ratings_1.0.201.0.zip",
+        "checksum": "9a30b98ff44a2e3889974d9249b4fd93",
+        "timestamp": "2026-01-19T20:00:00Z"
+      },
+      {
         "version": "1.0.200.0",
         "changelog": "Fixed: Leaving badges now appear on cards (bottom-right, rating badges at top-left). Pass itemId to createAndPositionOverlay.",
         "targetAbi": "10.11.0.0",
