--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.202.0",
+        "changelog": "Fixed: Leaving badges on cards now use DOM elements instead of CSS pseudo-elements for better visibility.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.202.0/jellyfin-plugin-ratings_1.0.202.0.zip",
+        "checksum": "76becdee9d680514dc6865daa8721bd6",
+        "timestamp": "2026-01-19T20:30:00Z"
+      },
+      {
         "version": "1.0.201.0",
         "changelog": "DEBUG: Added logging to diagnose leaving badge issues on cards.",
         "targetAbi": "10.11.0.0",
