--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.203.0",
+        "changelog": "Fixed: Leaving badges now use EXACT same approach as rating badges - added via IntersectionObserver, positioned at top-right.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.203.0/jellyfin-plugin-ratings_1.0.203.0.zip",
+        "checksum": "e6a10265637548647bac8e2d69de7534",
+        "timestamp": "2026-01-19T21:00:00Z"
+      },
+      {
         "version": "1.0.202.0",
         "changelog": "Fixed: Leaving badges on cards now use DOM elements instead of CSS pseudo-elements for better visibility.",
         "targetAbi": "10.11.0.0",
