--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.svg?v=6",
     "versions": [
       {
+        "version": "1.0.206.0",
+        "changelog": "Fixed leaving badge placement on media cards.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.206.0/jellyfin-plugin-ratings_1.0.206.0.zip",
+        "checksum": "1e30c4bcd6756ec7a93e53b30ca3be6f",
+        "timestamp": "2026-01-19T22:30:00Z"
+      },
+      {
         "version": "1.0.205.0",
         "changelog": "Improved leaving badge rendering on media cards.",
         "targetAbi": "10.11.0.0",
