--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.218.0",
+        "changelog": "Latest Media now shows series with new episodes added, with badge indicator.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.218.0/jellyfin-plugin-ratings_1.0.218.0.zip",
+        "checksum": "8de7f0ce708aeb3ae03906a06de34fb4",
+        "timestamp": "2026-01-24T23:00:00Z"
+      },
+      {
         "version": "1.0.217.0",
         "changelog": "Redesigned admin request management with collapsible categories and auto-processing.",
         "targetAbi": "10.11.0.0",
