--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.220.0",
+        "changelog": "Fixed Latest Media badge not hiding when no new media.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.220.0/jellyfin-plugin-ratings_1.0.220.0.zip",
+        "checksum": "1c25970af2feba88d89ce779becc645f",
+        "timestamp": "2026-01-25T14:20:00Z"
+      },
+      {
         "version": "1.0.219.0",
         "changelog": "Latest Media notification badge showing new media count, with NEW indicator for items added in last 2 hours.",
         "targetAbi": "10.11.0.0",
