--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.223.0",
+        "changelog": "Media Management now shows play counts for current user.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.223.0/jellyfin-plugin-ratings_1.0.223.0.zip",
+        "checksum": "f8a6004dec4d69aa2207faf19b7f6fb2",
+        "timestamp": "2026-01-25T14:50:00Z"
+      },
+      {
         "version": "1.0.222.0",
         "changelog": "Fixed Media Management loading issue - simplified data fetching for better performance.",
         "targetAbi": "10.11.0.0",
