--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.224.0",
+        "changelog": "Disable background page scrolling when modals are open.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.224.0/jellyfin-plugin-ratings_1.0.224.0.zip",
+        "checksum": "9c78d1cd5e9f328c9cf41d86f67d715b",
+        "timestamp": "2026-01-25T15:00:00Z"
+      },
+      {
         "version": "1.0.223.0",
         "changelog": "Media Management now shows play counts for current user.",
         "targetAbi": "10.11.0.0",
