--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.227.0",
+        "changelog": "Media Management rows now fade in one by one with smooth animation.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.227.0/jellyfin-plugin-ratings_1.0.227.0.zip",
+        "checksum": "cfda46fbaad399f7079706e4f6c5223e",
+        "timestamp": "2026-01-25T15:45:00Z"
+      },
+      {
         "version": "1.0.226.0",
         "changelog": "Major performance improvement: Media Management loads much faster by calculating stats only for visible items.",
         "targetAbi": "10.11.0.0",
