--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.228.0",
+        "changelog": "Progressive loading: first items appear quickly, more load in background while animation plays.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.228.0/jellyfin-plugin-ratings_1.0.228.0.zip",
+        "checksum": "b6966a02ad38fdd8853529af903e7c91",
+        "timestamp": "2026-01-25T16:00:00Z"
+      },
+      {
         "version": "1.0.227.0",
         "changelog": "Media Management rows now fade in one by one with smooth animation.",
         "targetAbi": "10.11.0.0",
