--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.234.0",
+        "changelog": "Fixed Media Management pagination caching issue - clicking next page now correctly loads new results.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.234.0/jellyfin-plugin-ratings_1.0.234.0.zip",
+        "checksum": "82319f42bde25a9a2c4af5b683aeff3c",
+        "timestamp": "2026-02-04T19:15:00Z"
+      },
+      {
         "version": "1.0.233.0",
         "changelog": "Fixed header elements (search, request button) overlapping on iPhone initial page load.",
         "targetAbi": "10.11.0.0",
