--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.236.0",
+        "changelog": "Improved deletion dialog (close button, custom hours), fixed Scheduled tab race condition, fixed media type labels showing as IDs.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.236.0/jellyfin-plugin-ratings_1.0.236.0.zip",
+        "checksum": "e82cbddf10488c6747122b853e070bd4",
+        "timestamp": "2026-02-04T19:45:00Z"
+      },
+      {
         "version": "1.0.235.0",
         "changelog": "Fixed Media Management pagination race condition - prevents stale responses from overwriting newer page data.",
         "targetAbi": "10.11.0.0",
