--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.237.0",
+        "changelog": "Redesigned Scheduled tab with poster images, time badges, and Change/Cancel buttons matching regular media style.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.237.0/jellyfin-plugin-ratings_1.0.237.0.zip",
+        "checksum": "7151658686d2ba419d359536837aa3c3",
+        "timestamp": "2026-02-04T20:00:00Z"
+      },
+      {
         "version": "1.0.236.0",
         "changelog": "Improved deletion dialog (close button, custom hours), fixed Scheduled tab race condition, fixed media type labels showing as IDs.",
         "targetAbi": "10.11.0.0",
