--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.238.0",
+        "changelog": "Fixed library tab names showing as IDs, vertically centered action buttons in media rows.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.238.0/jellyfin-plugin-ratings_1.0.238.0.zip",
+        "checksum": "109614ae548ce81d4f15f3e28283dc3b",
+        "timestamp": "2026-02-04T20:15:00Z"
+      },
+      {
         "version": "1.0.237.0",
         "changelog": "Redesigned Scheduled tab with poster images, time badges, and Change/Cancel buttons matching regular media style.",
         "targetAbi": "10.11.0.0",
