--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.239.0",
+        "changelog": "Fixed Scheduled tab race condition, improved button styling with gradient design, centered action buttons.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.239.0/jellyfin-plugin-ratings_1.0.239.0.zip",
+        "checksum": "9a866871f90ccd2522f800c7c0aa88f5",
+        "timestamp": "2026-02-04T20:30:00Z"
+      },
+      {
         "version": "1.0.238.0",
         "changelog": "Fixed library tab names showing as IDs, vertically centered action buttons in media rows.",
         "targetAbi": "10.11.0.0",
