--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.247.0",
+        "changelog": "Fix notification tooltip not disappearing - now auto-hides after 2 seconds on all platforms.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.247.0/jellyfin-plugin-ratings_1.0.247.0.zip",
+        "checksum": "59b6625549ade4c107202595405cee8e",
+        "timestamp": "2026-02-08T23:23:00Z"
+      },
+      {
         "version": "1.0.246.0",
         "changelog": "Fix red cross lines to match larger bell icon, raise bell 3px on small screens.",
         "targetAbi": "10.11.0.0",
