--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.248.0",
+        "changelog": "Ask to Delete: Users can request deletion of fulfilled media. Admins see a new Deletion Requests tab with schedule options.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.248.0/jellyfin-plugin-ratings_1.0.248.0.zip",
+        "checksum": "58c77f290a9731606c612f7a688d60ff",
+        "timestamp": "2026-02-09T12:00:00Z"
+      },
+      {
         "version": "1.0.247.0",
         "changelog": "Fix notification tooltip not disappearing - now auto-hides after 2 seconds on all platforms.",
         "targetAbi": "10.11.0.0",
