--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.249.0",
+        "changelog": "Two deletion request types: 'Request to delete request' (for pending/processing) and 'Request to delete media' (for fulfilled). Fixed button visibility.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.249.0/jellyfin-plugin-ratings_1.0.249.0.zip",
+        "checksum": "69a46afa2c2cc8812a778d132e5dbd02",
+        "timestamp": "2026-02-09T13:00:00Z"
+      },
+      {
         "version": "1.0.248.0",
         "changelog": "Ask to Delete: Users can request deletion of fulfilled media. Admins see a new Deletion Requests tab with schedule options.",
         "targetAbi": "10.11.0.0",
