--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.251.0",
+        "changelog": "Custom rejection reason modal, notification badges on admin tabs, brighter bell cross lines.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.251.0/jellyfin-plugin-ratings_1.0.251.0.zip",
+        "checksum": "09c6264f84b713fc7e707b3029c03f3f",
+        "timestamp": "2026-02-09T19:00:00Z"
+      },
+      {
         "version": "1.0.250.0",
         "changelog": "Rejection reasons for deletion requests, 3-request limit per media, badge alignment fix, console log cleanup.",
         "targetAbi": "10.11.0.0",
