--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.253.0",
+        "changelog": "Rating badge display profiles: resolution-based customization of badge position, size, text visibility, and background.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.253.0/jellyfin-plugin-ratings_1.0.253.0.zip",
+        "checksum": "b82c8b57a3c7764cdf2c5557f18f0be1",
+        "timestamp": "2026-02-11T12:00:00Z"
+      },
+      {
         "version": "1.0.252.0",
         "changelog": "User ban system for media and deletion requests, show all rejection messages, codebase security audit.",
         "targetAbi": "10.11.0.0",
