--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.255.0",
+        "changelog": "Fix Enable Ratings toggle now fully disables ratings when unchecked. Fix badge profile axis dropdown clipping.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.255.0/jellyfin-plugin-ratings_1.0.255.0.zip",
+        "checksum": "686fca3c08830af8b97c24b36bab30b6",
+        "timestamp": "2026-02-11T15:00:00Z"
+      },
+      {
         "version": "1.0.254.0",
         "changelog": "Redesigned settings page with collapsible groups, compact table-based badge profiles with H/V axis, badge profiles now override default CSS.",
         "targetAbi": "10.11.0.0",
