--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.257.0",
+        "changelog": "Fix profile values resetting when adding/removing, rename offsets to Horizontal/Vertical with direction hints.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.257.0/jellyfin-plugin-ratings_1.0.257.0.zip",
+        "checksum": "10444ba6c9ea858d4bc34f8344129042",
+        "timestamp": "2026-02-11T17:00:00Z"
+      },
+      {
         "version": "1.0.256.0",
         "changelog": "Fix Enable Ratings toggle (gates widget injection and card overlays), fix badge profile dropdown hidden behind elements.",
         "targetAbi": "10.11.0.0",
