--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.259.0",
+        "changelog": "Rating widget overlaid on top of .infoWrapper with absolute positioning, responsive star sizing.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.259.0/jellyfin-plugin-ratings_1.0.259.0.zip",
+        "checksum": "ebdbe0c6c11c2c344d4ee3375097e22b",
+        "timestamp": "2026-02-11T19:00:00Z"
+      },
+      {
         "version": "1.0.258.0",
         "changelog": "Relocated rating widget into .infoWrapper between title and metadata. Responsive star sizing following Jellyfin breakpoints.",
         "targetAbi": "10.11.0.0",
