--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.262.0",
+        "changelog": "Rating widget stacked layout: stars on top, text on bottom. Fixes mobile overflow.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.262.0/jellyfin-plugin-ratings_1.0.262.0.zip",
+        "checksum": "d5eddeb534aa96d51628e094ab7f660b",
+        "timestamp": "2026-02-12T10:00:00Z"
+      },
+      {
         "version": "1.0.261.0",
         "changelog": "Rating widget above detailRibbon, left-aligned with detailSection content start. Re-aligns on resize.",
         "targetAbi": "10.11.0.0",
