--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.266.0",
+        "changelog": "Mobile: rating widget no longer overlaps poster, flows below with 10px gap.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.266.0/jellyfin-plugin-ratings_1.0.266.0.zip",
+        "checksum": "f984c6cbea087dc7744f29c663c03925",
+        "timestamp": "2026-02-12T12:00:00Z"
+      },
+      {
         "version": "1.0.265.0",
         "changelog": "Center-align stats text inside rating widget with text-align: center.",
         "targetAbi": "10.11.0.0",
