--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.267.0",
+        "changelog": "Mobile: widget positioned to right of poster with 10px gap, same vertical position.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.267.0/jellyfin-plugin-ratings_1.0.267.0.zip",
+        "checksum": "39e1c9639f2b3d1c6753ad19ef4e9ad4",
+        "timestamp": "2026-02-12T12:30:00Z"
+      },
+      {
         "version": "1.0.266.0",
         "changelog": "Mobile: rating widget no longer overlaps poster, flows below with 10px gap.",
         "targetAbi": "10.11.0.0",
