--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.268.0",
+        "changelog": "Fix mobile poster detection: try multiple selectors to find poster element.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.268.0/jellyfin-plugin-ratings_1.0.268.0.zip",
+        "checksum": "ecc388656ccd941de89096c0794e0805",
+        "timestamp": "2026-02-12T13:00:00Z"
+      },
+      {
         "version": "1.0.267.0",
         "changelog": "Mobile: widget positioned to right of poster with 10px gap, same vertical position.",
         "targetAbi": "10.11.0.0",
