--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.269.0",
+        "changelog": "Debug logging for mobile widget alignment to diagnose poster detection.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.269.0/jellyfin-plugin-ratings_1.0.269.0.zip",
+        "checksum": "e02f64e60eb31ab3f62f4aa6849051b7",
+        "timestamp": "2026-02-12T13:30:00Z"
+      },
+      {
         "version": "1.0.268.0",
         "changelog": "Fix mobile poster detection: try multiple selectors to find poster element.",
         "targetAbi": "10.11.0.0",
