--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.270.0",
+        "changelog": "Fix poster detection: use .cardImageContainer selector matching actual Jellyfin poster element.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.270.0/jellyfin-plugin-ratings_1.0.270.0.zip",
+        "checksum": "76e03f68c00837abeda396b32d89f7ce",
+        "timestamp": "2026-02-12T14:00:00Z"
+      },
+      {
         "version": "1.0.269.0",
         "changelog": "Debug logging for mobile widget alignment to diagnose poster detection.",
         "targetAbi": "10.11.0.0",
